commiting script which is not completely finished yet (has a comment)

--- a/verkkosivu/index.html
+++ b/verkkosivu/index.html
@@ -7,5 +7,14 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <form action="https://api.tvmaze.com/search/shows" >
+        <input id="query" name="username" type="text">
+        <input type="submit" value="Login">
+      <form action="https://api.tvmaze.com/search/shows" >
+        <input id="query2" name="password" type="text">
+        <input type="submit" value="Password">
+    </form>
+  <div></div>
+  </body>
 </html>
