--- a/verkkosivu/index.html
+++ b/verkkosivu/index.html
@@ -8,13 +8,11 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <form action="https://api.tvmaze.com/search/shows" >
-        <input id="query" name="username" type="text">
-        <input type="submit" value="Login">
-      <form action="https://api.tvmaze.com/search/shows" >
-        <input id="query2" name="password" type="text">
-        <input type="submit" value="Password">
+    <form>
+      <input id="query-user" name="username" type="text" />
+      <input id="query-pass" name="password" type="text" />
+      <input type="submit" value="Login" />
     </form>
-  <div></div>
+    <div></div>
   </body>
 </html>
