--- a/verkkosivu/index.html
+++ b/verkkosivu/index.html
@@ -11,8 +11,9 @@
     <form>
       <input id="query-user" name="username" type="text" />
       <input id="query-pass" name="password" type="text" />
-      <input type="submit" value="Login" />
+      <input class="login" type="submit" value="Login" />
+      <input class="register" type="submit" value="Register" />
     </form>
-    <div></div>
+    <div class="result"></div>
   </body>
 </html>
