--- a/Käyttöliittymä/game.html
+++ b/Käyttöliittymä/game.html
@@ -19,17 +19,17 @@
 <div class="container">
     <header class="page-header">
         <h1 class="title">
-            $ VELKAJAHTI $
+            $ CHASE THE RAT $
         </h1>
         <nav>
             <ul class="flex-wrap">
-                <li>
+                <li class="buttons">
                     <a class="button" href="">Instructions</a>
                 </li>
-                <li>
+                <li class="buttons">
                     <a class="button" href="">Tutorial</a>
                 </li>
-                <li>
+                <li class="buttons">
                     <a class="button" href="">Exit</a>
                 </li>
             </ul>
@@ -38,15 +38,15 @@
 
     <main class="flex-wrap">
         <div class="game-elements">
-            <section class="box">
-                <header id="hint">
+            <section class="hint">
+                <header>
                     <h3>Hint for your next location........</h3>
                 </header>
                 <p>
                     <span id="next-hint"></span>
                 </p>
             </section>
-            <section class="box">
+            <section class="coincidence">
                 <header>
                     <h3>Coincidence</h3>
                 </header>
@@ -54,19 +54,19 @@
                     <span id="given-coincidence"></span>
                 </p>
             </section>
-            <section>
-                <ul id="icao-codes">
-                    <li>Icao + airport</li>
-                    <li>Icao + airport</li>
-                    <li>Icao + airport</li>
-                    <li>Icao + airport</li>
-                    <li>Icao + airport</li>
+            <section class="icao-buttons">
+                <ul>
+                    <li class="icao-button"> Icao + airport</li>
+                    <li class="icao-button"> Icao + airport</li>
+                    <li class="icao-button">Icao + airport</li>
+                    <li class="icao-button">Icao + airport</li>
+                    <li class="icao-button">Icao + airport</li>
                 </ul>
             </section>
-            <aside id="work">
+            <aside class="work">
                 <h3>Stay + work</h3>
             </aside>
-            <section class="box">
+            <section class="status">
                 <header>
                     <h3>Current status</h3>
                 </header>
