--- a/HTML+CSS/startPage.html
+++ b/HTML+CSS/startPage.html
@@ -2,10 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <title>Start page</title>
+    <meta name="description" content="Starting page for the project MK2">
     <link href="styling.css" rel="stylesheet">
+    <script src="" defer></script>
 </head>
 <body>
+<div class="start_container">
+    <header>
+        <nav class="navBar">
+            <p>TÄNNE MAHDOLLISIA LINKKEJÄ</p>
+        </nav>
+    </header>
+    <main>
+        <h1>CHASE THE RAT</h1>
+        <div class="btn_container">
+            <button type="button"><img src="IMG/game_pad.jpg" alt="login image"/></button>
+            <button type="button"><img src="IMG/instructions.jpg" alt="instructions img"/></button>
+            <button type="button"><img src="IMG/tutorial.jpg" alt="instructions img"/></button>
+        </div>
+    </main>
+    <nav class="exit">
+        <button type="button">EXIT</button>
+    </nav>
+</div>
 
 </body>
 </html>
