--- a/HTML+CSS/startPage.html
+++ b/HTML+CSS/startPage.html
@@ -12,19 +12,19 @@
 <div class="start_container">
     <header>
         <nav class="navBar">
-            <p>TÄNNE MAHDOLLISIA LINKKEJÄ</p>
+            <button type="button">ABOUT</button>
+            <button type="button">EXIT</button>
         </nav>
     </header>
     <main>
         <h1>CHASE THE RAT</h1>
         <div class="btn_container">
-            <button type="button"><img src="IMG/game_pad.jpg" alt="login image"/></button>
+            <a href="loginPage.html"><button type="button"><img src="IMG/game_pad.jpg" alt="login image"/></button></a>
             <button type="button"><img src="IMG/instructions.jpg" alt="instructions img"/></button>
             <button type="button"><img src="IMG/tutorial.jpg" alt="instructions img"/></button>
         </div>
     </main>
     <nav class="exit">
-        <button type="button">EXIT</button>
     </nav>
 </div>
 
