--- a/HTML+CSS/loginPage.html
+++ b/HTML+CSS/loginPage.html
@@ -21,7 +21,9 @@
       <input class="register" type="submit" value="Register" />
     </form>
     <div class="result"></div>
-  </main>
 
+  </main>
+  <nav class="loginNav2">
+    </nav>
   </body>
 </html>
