--- a/Käyttöliittymä/game.html
+++ b/Käyttöliittymä/game.html
@@ -54,15 +54,11 @@
                     <button type="button" class="icao-button">Icao + airport</button>
                     <button type="button" class="icao-button">Icao + airport</button>
                 </div>
-            </section>
-            <section class="work-button">
-                <div>
+                <div class="work-button">
                     <button type="button" class="work">
                         <h3>Stay + work</h3>
                     </button>
                 </div>
-            </section>
-            <section class="coincidence-box">
                 <div class="coincidence">
                     <header>
                         <h3>Coincidence</h3>
