--- a/HTML+CSS/startPage.html
+++ b/HTML+CSS/startPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
-    <title>Start page</title>
+    <title>Velkajahti: Home</title>
     <meta name="description" content="Starting page for the project MK2">
     <link href="styling.css" rel="stylesheet">
     <script src="" defer></script>
@@ -13,7 +13,6 @@
     <header>
         <nav class="navBar">
             <button type="button">ABOUT</button>
-            <button type="button">EXIT</button>
         </nav>
     </header>
     <main>
