--- a/HTML+CSS/loginPage.html
+++ b/HTML+CSS/loginPage.html
@@ -3,26 +3,29 @@
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Login page</title>
+    <title>Velkajahti: Login</title>
     <link rel="stylesheet" href="styling.css"/>
     <script src="script.js" defer></script>
   </head>
   <body class="loginBody">
   <header>
-        <nav class="navBar">
-            <a href="startPage.html"><button type="button">EXIT</button></a>
+        <nav class="navBar2">
         </nav>
     </header>
   <main class="loginMain">
       <form class="loginForm">
-      <input id="query-user" name="username" type="text" placeholder="USERNAME"/>
-      <input id="query-pass" name="password" type="text" placeholder="PASSWORD"/>
-      <input class="login" type="submit" value="Login" />
-      <input class="register" type="submit" value="Register" />
+      <input id="query-user" name="username" type="text" placeholder="Username"/>
+      <input id="query-pass" name="password" type="text" placeholder="Password"/>
+          <div class="logSubmit">
+            <input class="login" type="submit" value="Login" />
+            <input class="register" type="submit" value="Register" />
+          </div>
     </form>
     <div class="result"></div>
-
   </main>
+  <div class="exitBtn">
+      <a href="startPage.html"><button type="button">EXIT</button></a>
+          </div>
   <nav class="loginNav2">
     </nav>
   </body>
