--- a/Käyttöliittymä/game.html
+++ b/Käyttöliittymä/game.html
@@ -46,13 +46,13 @@
                     <span id="next-hint"></span>
                 </p>
             </section>
-            <section class="icao-buttons">
+            <section class="box">
                 <div>
-                    <button type="button" class="icao-button"> Icao + airport</button>
-                    <button type="button" class="icao-button"> Icao + airport</button>
-                    <button type="button" class="icao-button">Icao + airport</button>
-                    <button type="button" class="icao-button">Icao + airport</button>
-                    <button type="button" class="icao-button">Icao + airport</button>
+                    <button type="button" class="icao-button">-----------Icao + airport-----------</button>
+                    <button type="button" class="icao-button">-----------Icao + airport-----------</button>
+                    <button type="button" class="icao-button">-----------Icao + airport-----------</button>
+                    <button type="button" class="icao-button">-----------Icao + airport-----------</button>
+                    <button type="button" class="icao-button">-----------Icao + airport-----------</button>
                 </div>
                 <div class="work-button">
                     <button type="button" class="work">
