--- a/HTML+CSS/startPage.html
+++ b/HTML+CSS/startPage.html
@@ -6,7 +6,7 @@
     <title>Velkajahti: Home</title>
     <meta name="description" content="Starting page for the project MK2">
     <link href="styling.css" rel="stylesheet">
-    <script src="" defer></script>
+    <script src="myScript.js" defer></script>
 </head>
 <body>
 <div class="start_container">
