--- a/HTML+CSS/loginPage.html
+++ b/HTML+CSS/loginPage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Velkajahti: Login</title>
     <link rel="stylesheet" href="styling.css"/>
-    <script src="script.js" defer></script>
+    <script src="myScript.js" defer></script>
   </head>
   <body class="loginBody">
   <header>
@@ -15,7 +15,8 @@
   <main class="loginMain">
       <form class="loginForm">
       <input id="query-user" name="username" type="text" placeholder="Username"/>
-      <input id="query-pass" name="password" type="text" placeholder="Password"/>
+      <input id="query-pass" name="password" type="password" placeholder="4-digit PIN"/>
+      <input class="hide" type="checkbox" onclick="hideFunction()">Show password
           <div class="logSubmit">
             <input class="login" type="submit" value="Login" />
             <input class="register" type="submit" value="Register" />
