--- a/Käyttöliittymä/game.html
+++ b/Käyttöliittymä/game.html
@@ -47,11 +47,11 @@
                 </p>
             </section>
             <section class="box">
-                <div>
-                    <button type="button" class="icao-button">-----------Icao + airport-----------</button>
-                    <button type="button" class="icao-button">-----------Icao + airport-----------</button>
-                    <button type="button" class="icao-button">-----------Icao + airport-----------</button>
-                    <button type="button" class="icao-button">-----------Icao + airport-----------</button>
+                <div class="icao-buttons">
+                    <button type="button" class="icao-button" style="margin-bottom: 0.5rem">-----------Icao + airport-----------</button>
+                    <button type="button" class="icao-button" style="margin-bottom: 0.5rem">-----------Icao + airport-----------</button>
+                    <button type="button" class="icao-button" style="margin-bottom: 0.5rem">-----------Icao + airport-----------</button>
+                    <button type="button" class="icao-button" style="margin-bottom: 0.5rem">-----------Icao + airport-----------</button>
                     <button type="button" class="icao-button">-----------Icao + airport-----------</button>
                 </div>
                 <div class="work-button">
