--- a/Käyttöliittymä/game.html
+++ b/Käyttöliittymä/game.html
@@ -24,10 +24,22 @@
         <nav>
             <ul class="flex-wrap">
                 <li class="buttons">
-                    <a class="button" href="">Instructions</a>
-                </li>
+                    <a id="help-button" class="button">Help</a>
+                    <div id="help-modal" class="help-modal">
+                        <div class="help-content">
+                            <span class="close">&times;</span>
+                            <p>some text in the modal</p>
+                        </div>
+                    </div>
                 <li class="buttons">
-                    <a class="button" href="">Tutorial</a>
+                    <a id="instruction-button" class="button">Instructions</a>
+                    <div id="instruction-modal" class="instruction-modal">
+                        <div class="instruction-content">
+                            <span class="close">&times;</span>
+                            <p>some text in the modal</p>
+                        </div>
+                    </div>
+                </li>
                 </li>
                 <li class="buttons">
                     <a class="button" href="">Exit</a>
@@ -55,9 +67,15 @@
                     <button type="button" class="icao-button">-----------Icao + airport-----------</button>
                 </div>
                 <div class="work-button">
-                    <button type="button" class="work">
+                    <button type="button" class="work" id="work-button">
                         <h3>Stay + work</h3>
                     </button>
+                    <div id="work-modal" class="work-modal">
+                        <div class="work-content">
+                            <span class="close">&times;</span>
+                            <p>some text in the modal</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="coincidence">
                     <header>
