--- a/Käyttöliittymä/game.html
+++ b/Käyttöliittymä/game.html
@@ -36,7 +36,24 @@
                     <div id="instruction-modal" class="instruction-modal">
                         <div class="instruction-content">
                             <span class="close">&times;</span>
-                            <p>some text in the modal</p>
+                            <p>Welcome to Chase The Rat!<br><br><em>This guide is not required, but may help you understand the game.</em><br><br>
+                                You'll need to enter an existing username and a PIN-code to play with your user OR<br>
+                                you can create new username and a PIN-code.<br><br>
+                                In this game you'll travel between different airports, trying to find the Rat who owes you money.<br>
+                                The rat has done some airport-hopping and the game will give you clues of his route and final location.<br>
+                                Each game will draw a new route of five airports, the fifth being the current location of the Rat.<br>
+                                You'll need to unravel the clues and follow the route that the rat took.<br><br>
+                                There are a total of ten rounds in each game for you to try to find the Rat and each time you travel you'll use one round.<br>
+                                You have a limited amount of money to spend on your trip and your emissions will alter your final score in the game.<br><br>
+                                The game will give you your first clue and after unraveling it you can start travelling to the first airport.<br>
+                                If you get the given clue correct the game will give you a clue to reach the next airport.<br><br>
+                                With the clues, you also have a chance to be given a positive OR negative coincidence.<br>
+                                If you solve the clue the possibility to get a positive coincidence is much higher<br>
+                                AND if you travel to the wrong airport you are more likely to experience negative coincidence.<br><br>
+                                If you reach the final destination where the Rat is within the given rounds: <em>you'll win.</em><br><br>
+                                After reaching the goal the game will calculate your final points:<br>
+                                <em>Your money * rounds left + Emission budget - actual emissions.</em><br><br>
+                                If you don't find the Rat within the ten rounds: <em>you'll lose.</em>
                         </div>
                     </div>
                 </li>
