--- a/HTML+CSS/loginPage.html
+++ b/HTML+CSS/loginPage.html
@@ -9,8 +9,6 @@
   </head>
   <body class="loginBody">
   <header>
-        <nav class="navBar2">
-        </nav>
     </header>
   <main class="loginMain">
       <form class="loginForm">
@@ -27,9 +25,7 @@
     <div class="result"></div>
   </main>
   <div class="exitBtn">
-      <a href="startPage.html"><button type="button">EXIT</button></a>
+      <a href="startPage.html"><button class="button-85" role="button">RETURN</button></a>
           </div>
-  <nav class="loginNav2">
-    </nav>
   </body>
 </html>
