--- a/HTML+CSS/startPage.html
+++ b/HTML+CSS/startPage.html
@@ -20,9 +20,14 @@
     <main>
 
         <div class="aboutPop" id="aboutPop">
-            <img src="https://placehold.co/600x400" alt="placeholder image">
-            <h1>HAISTA VITTU</h1>
-            <button type="button" class="aboutOk" onclick="closeAboutpop()">OK</button>
+            <h2>What is this all about?</h2>
+            <p>"Chase The Rat"© or "Velkajahti" is a game developed by a small indie developer studio consisting of
+             four first year IT students based in Metropolia University of Applied Sciences.<br><br>
+
+            It all started from an idea in early fall when four ambitious students embarked on a journey to obtain a high
+             paying job. Someone had to lift the cat on the table... Anyways there will be plenty more where this came from. Stay tuned!
+            <br><br></p>
+            <button class="button-61" role="button" onclick="closeAboutpop()">Gotcha</button>
         </div>
 
         <h1>CHASE THE RAT</h1>
@@ -34,8 +39,6 @@
         </div>
 
     </main>
-    <nav class="exit">
-    </nav>
 </div>
 
 </body>
