--- a/Käyttöliittymä/game.html
+++ b/Käyttöliittymä/game.html
@@ -12,6 +12,7 @@
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
         crossorigin="" defer></script>
     <script src="game.script.js" defer></script>
+    <script src="../verkkosivu/script.js" defer></script>
     <title>Velkajahti</title>
 </head>
 
