--- a/HTML+CSS/startPage.html
+++ b/HTML+CSS/startPage.html
@@ -16,7 +16,7 @@
             <button
                     class="aboutUs"
                     type="submit"
-                    onclick="openAboutpop()">ABOUT US
+                    onclick="openAboutPop()">ABOUT US
             </button>
         </nav>
     </header>
@@ -34,7 +34,7 @@
             <br><br></p>
             <button class="button-61"
                     role="button"
-                    onclick="closeAboutpop()">Gotcha
+                    onclick="closeAboutPop()">Gotcha
             </button>
         </div>
 
