--- a/HTML+CSS/startPage.html
+++ b/HTML+CSS/startPage.html
@@ -13,9 +13,8 @@
 
     <header>
         <nav class="navBar">
-            <button
-                    class="aboutUs"
-                    type="submit"
+            <button class="button-61"
+                    role="button"
                     onclick="openAboutPop()">ABOUT US
             </button>
         </nav>
