--- a/HTML+CSS/startPage.html
+++ b/HTML+CSS/startPage.html
@@ -11,7 +11,7 @@
 <body class="startBody">
 <div class="start_container">
 
-    <header>
+    <header class="startHeader">
         <nav class="navBar">
             <button class="button-61"
                     role="button"
@@ -64,14 +64,10 @@
             </button>
         </div>
 
-
-
-        <h1>CHASE THE RAT</h1>
-
         <div class="btn_container">
-            <a href="loginPage.html"><img src="IMG/gamepad.jpg" alt="login image"/></a>
-            <img src="IMG/question.jpg" alt="instructions img" onClick="openInstrPop()"/>
-            <img src="IMG/hands.jpg" alt="instructions img"/>
+            <a href="loginPage.html"><img class="pad" src="IMG/gamepad2.jpg" alt="login image"/></a>
+            <a><img class="quest" src="IMG/question2.jpg" alt="instructions img" onClick="openInstrPop()"/></a>
+            <a><img class="hands" src="IMG/hands2.jpg" alt="instructions img"/></a>
         </div>
 
     </main>
