--- a/Käyttöliittymä/game.html
+++ b/Käyttöliittymä/game.html
@@ -91,7 +91,33 @@
                     <div id="work-modal" class="work-modal">
                         <div class="work-content">
                             <span class="close">&times;</span>
-                            <p>some text in the modal</p>
+                            <div class="stay-to-work">
+                                <p>You could not afford to fly to your next location... You need to work and earn some money!</p>
+                            </div>
+                            <section class="work-box">
+                                <div>
+                                    <h3 class="work-header">Choose a job to work at:</h3>
+                                </div>
+                            </section>
+                            <section class="work-buttons">
+                                <div class="flower-button" style="margin-right: 0.5rem">
+                                    <p>The flower shop could need a hand. Click FLOWER to work at the flower shop.</p>
+                                    <button type="button" id="select-flower">FLOWER</button>
+                                </div>
+                                <div class="burger-button" style="margin-right: 0.5rem">
+                                    <p>You're going to be flipping some burgers. Click BURGER to work at the fastfood restaurant.</p>
+                                    <button type="button" id="select-burger">BURGER</button>
+                                </div>
+                                <div class="exchange-button">
+                                    <p>The currency exchange needs someone to count the bills. Click EXCHANGE to work at the currency exchange.</p>
+                                    <button type="button" id="select-exchange">EXCHANGE</button>
+                                </div>
+                            </section>
+                            <section>
+                                <div class="selected-job">
+                                    <p><span id="selected"></span></p>
+                                </div>
+                            </section>
                         </div>
                     </div>
                 </div>
