--- a/HTML+CSS/startPage.html
+++ b/HTML+CSS/startPage.html
@@ -63,13 +63,11 @@
                     onclick="closeInstrPop()">Gotcha
             </button>
         </div>
-
         <div class="btn_container">
             <a href="loginPage.html"><img class="pad" src="IMG/gamepad2.jpg" alt="login image"/></a>
             <a><img class="quest" src="IMG/question2.jpg" alt="instructions img" onClick="openInstrPop()"/></a>
-            <a><img class="hands" src="IMG/hands2.jpg" alt="instructions img"/></a>
+            <a><img class="hands" src="IMG/hands2.jpg" alt="tutorial image"/></a>
         </div>
-
     </main>
 </div>
 
