--- a/FINAL/index.html
+++ b/FINAL/index.html
@@ -64,7 +64,7 @@
             </button>
         </div>
         <div id="btn_container" class="btn_container">
-            <a href="loginPage.html"><img class="pad" src="IMG/gamepad2.jpg" alt="login image"/></a>
+            <a href="login.html"><img class="pad" src="IMG/gamepad2.jpg" alt="login image"/></a>
             <a><img class="quest" src="IMG/question2.jpg" alt="instructions img" onClick="openInstrPop()"/></a>
             <a><img class="hands" src="IMG/hands2.jpg" alt="tutorial image"/></a>
         </div>
