--- a/FINAL/login.html
+++ b/FINAL/login.html
@@ -37,7 +37,7 @@
       <div class="result"></div>
     </main>
     <div class="exitBtn">
-      <a href="startPage.html"
+      <a href="index.html"
         ><button class="button-85" role="button">RETURN</button></a
       >
     </div>
